This this the changelog file for the Pothos GUI toolkit.

Release 0.3.0 (pending)
==========================

- Save active edit tab in the block properties panel
- Added clear button to log message window
- Support conditional parameter preview mode
- Fix for size grip in GraphWidgetContainer on OSX
- Fixes for missing title bar and menu bar on OSX
- Cross platform styler for instances of QFormLayout
- Graph editor tabs setDocumentMode() for OSX appearance
- Ignore key press events from graph widgets with focus
- Switch logger display to QPlainTextEdit for performance

Release 0.2.2 (pending)
==========================

- Fix empty signal slot connection to display text label
- Fix QApplication exit error by giving QSettings a parent

Release 0.2.1 (2015-08-26)
==========================

- SpinBox edit widgets cache value to fix formatting bug
- Extra try/catch for system info because JSON can throw
- Hide message window tab bar until multiple tabs are used
- Fix duplicate ID bug than can occur during handle paste
- Fix enable handler for redundant events and widget objects
- Skip rotation event when no graph objects are selected
- Fixed handling of disabled block with property errors
- Topology stats use tree view to collapse/hide stat data
- Restore the last displayed graph page when reset/undoing
- Splash screen prints the current saved graph loading
- Fix graph editor handle cut to check for active graph
- Topology evaluator connections check for port existence

Release 0.2.0 (2015-06-17)
==========================

- Created stats dialog for viewing JSON topology stats
- Added properties panel for graph-wide global variables
- Disabling a block drops the evaluated block instance
- Enable/disable hooks for connections and breakers
- Zoom in and zoom out centering adjustments

Release 0.1.1 (2015-06-16)
==========================

- Fixed display of ellipsis Unicode character on Windows
- Planned cancel of the properties panel before load state